src/test/resources/semantic/custom/accept/whileStatement.ul
void main() {
    return foo();
}

void foo() {
    boolean constant;

    while (true == true) {
        ;
    }

    while (5 < 5 < constant) {
    }

    while (bar()) {
        return;
    }
}

boolean bar() {
}
