src/test/resources/semantic/custom/reject/lessThanInvalidTypesPrimitive3.ul
void main() {
}

boolean foo() {
    return 7 < 6.5;
}
